--- a/resources/views/partials/trigger-modal.edge
+++ b/resources/views/partials/trigger-modal.edge
@@ -1,21 +1,21 @@
 @if(type == 'anchor')
 <a class="{{ classnya || 'btn btn-primary' }}" href="javascript:void(0);" 
 data-toggle="modal" data-target="#modal-{{ targetModal }}">
-    @if(icon)
-        <span class="mr-2">{{ text }}</span>
-        <i class="fas {{ icon }}"></i>
-    @else
+    @if(text)
         <span>{{ text }}</span>
+    @end
+    @if(icon)
+        <i class="fas ml-2 {{ icon }}"></i>
     @end
 </a>
 @else
 <button class="{{ classnya || 'btn btn-primary ' + addClass  }}" 
 data-toggle="modal" data-target="#modal-{{ targetModal }}">
-    @if(icon)
-        <span class="mr-2">{{ text }}</span>
-        <i class="fas {{ icon }}"></i>
-    @else
+    @if(text)
         <span>{{ text }}</span>
+    @end
+    @if(icon)
+        <i class="fas ml-2 {{ icon }}"></i>
     @end
 </button>
 @endif
