--- a/resources/views/blog/article/form.edge
+++ b/resources/views/blog/article/form.edge
@@ -1,6 +1,11 @@
-<form action="{{ formAction }}" method="post" enctype="multipart/form-data">
+<form action="{{ formAction }}" method="post" enctype="multipart/form-data" 
+data-id="{{ article ? article.id : '' }}">
     {{ csrfField() }}
-    <input type="hidden" name="blog_category_id" required readonly>
+
+    @set('defaultCategoryActive',  article ? article.blog_category_id : '')
+    <input type="hidden" name="blog_category_id" 
+    value="{{ defaultCategoryActive }}" required readonly>
+
     @!component('partials/bootstrap-input', {
         label: 'Judul artikel yang akan dibuat',
         name: 'title',
@@ -53,6 +58,7 @@
             </label>
         </div>
         @endeach
+        <small class="form-text text-danger show_at_page-error-message"></small>
     </div>
 
     @if(flashMessages.has('errors.cover'))
