--- a/resources/views/partials/admin-css.edge
+++ b/resources/views/partials/admin-css.edge
@@ -5,3 +5,4 @@
 href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 <link rel="stylesheet" href="/assets/vendors/fancybox/jquery.fancybox.min.css">
 <link rel="stylesheet" href="/assets/vendors/summernote/summernote-bs4.min.css">
+<link rel="stylesheet" href="/assets/vendors/air-datepicker/css/datepicker.min.css">
