--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -144,6 +144,8 @@
     <script src="/assets/vendors/AdminLTE/plugins/select2/js/select2.full.min.js"></script>
     <script src="/assets/vendors/fancybox/jquery.fancybox.min.js"></script>
     <script src="/assets/vendors/summernote/summernote-bs4.min.js"></script>
+    <script src="/assets/vendors/air-datepicker/js/datepicker.min.js"></script>
+    <script src="/assets/vendors/air-datepicker/js/i18n/datepicker.en.js"></script>
     <script src="/assets/js/admin.js"></script>
     @!section('scripts')
 
