--- a/resources/views/blog/article/form.edge
+++ b/resources/views/blog/article/form.edge
@@ -2,6 +2,26 @@
 data-id="{{ article ? article.id : '' }}">
     {{ csrfField() }}
 
+    <div class="form-group">
+        <label for="cover" class="d-block">Cover artikel</label>
+
+        <img src="{{ article ? article.cover : '/assets/img/icon/preview-upload.png' }}" alt="" 
+        srcset="" id="preview-article-cover"
+        class="img-fluid mb-2" style="max-height: 200px" 
+        data-default-preview="{{ article ? article.cover : 
+        '/assets/img/icon/preview-upload.png' }}">
+
+        <div class="custom-file">
+            <input type="file" class="custom-file-input img-upload-preview
+            {{ flashMessages.has('errors.cover') ? 'is-invalid' : '' }}"
+            name="cover" id="cover"
+            data-img-preview="preview-article-cover" {{ action != 'edit' ? 'required' : '' }}>
+            <label class="custom-file-label" for="cover">
+                Pilih cover
+            </label>
+        </div>
+    </div>
+
     @set('defaultCategoryActive',  article ? article.blog_category_id : '')
     <input type="hidden" name="blog_category_id" 
     value="{{ defaultCategoryActive }}" required readonly>
@@ -27,26 +47,6 @@ data-id="{{ article ? article.id : '' }}">
     })
 
     <div class="form-group">
-        <label for="cover" class="d-block">Cover artikel</label>
-
-        <img src="{{ article ? article.cover : '/assets/img/icon/preview-upload.png' }}" alt="" 
-        srcset="" id="preview-article-cover"
-        class="img-fluid mb-2" style="max-height: 200px" 
-        data-default-preview="{{ article ? article.cover : 
-        '/assets/img/icon/preview-upload.png' }}">
-
-        <div class="custom-file">
-            <input type="file" class="custom-file-input img-upload-preview
-            {{ flashMessages.has('errors.cover') ? 'is-invalid' : '' }}"
-            name="cover" id="cover"
-            data-img-preview="preview-article-cover" {{ action != 'edit' ? 'required' : '' }}>
-            <label class="custom-file-label" for="cover">
-                Pilih cover
-            </label>
-        </div>
-    </div>
-
-    <div class="form-group">
         <label class="d-block mb-1">Tampilkan di halaman</label>
         @each((page, index) in listPage)
         <div class="d-inline-flex align-items-center mr-2">
@@ -61,12 +61,17 @@ data-id="{{ article ? article.id : '' }}">
         <small class="form-text text-danger show_at_page-error-message"></small>
     </div>
 
-    <div class="form-group">
-        <label for="cover" class="d-block">Tampilkan artikel ini sampai tanggal</label>
-        <input type="text" name="show_until" 
-        placeholder="Jika tidak ingin ada expire, kosongkan field ini"
-        class="datepicker-here form-control" id="show-until" required>
-    </div>
+    @!component('partials/bootstrap-input', {
+        prepandIcon: 'fas fa-calendar-alt',
+        name: 'show_until',
+        placeholder: 'Ex: 2021-09-21 12:00',
+        autocomplete: 'off',
+        addClass: 'air-datepicker',
+        helperText: `Klik untuk pilih tanggal, jika tidak ingin ada expire,
+                    kosongkan field ini`,
+        label: 'Tampilkan artikel ini sampai tanggal',
+        value: article ? new Intl.DateTimeFormat('id-ID').format(article.show_until) : ''
+    })
 
     @if(flashMessages.has('errors.cover'))
     <small class="form-text text-danger">
