--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -3,3 +3,5 @@
 @import "tailwindcss/utilities";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap');
+
+@import "./utilities";
